index.html file has been changed.

--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
                 </div>
             </div>
         </div>
-        <!-- <div class="text-center text-[11px]">
+        <div class="mt-6 text-center text-[11px]">
             Challenge by
             <a class="text-attribution-link" href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by
             <a href="https://github.com/mikailafsin">Mikail Afşin</a>.
-        </div> -->
+        </div>
     </body>
 </html>
